mark complete and incomplte feature working

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,7 +17,7 @@
         <%})%>
     </ul>
 <!-- making a fetch post on an onsubmit event hence not added the action on the form -->
-    <form method="post">
+    <form method="post" action="/todos/addNewTask">
         <input type="text" required name="newTask" placeholder="Write your Task" id="newTaskInput">
         <input type="submit" value="Add Task" id="addNewTaskBtn">
     </form>
