--- a/views/main.ejs
+++ b/views/main.ejs
@@ -11,8 +11,11 @@
     <h1 id="todo-heading">TODOS</h1> 
     <ul id="taskList">
         <% data.forEach(e=>{ %>
-            <li class=<%=e.completed?"completed":"notDone"%> data-id=<%=e._id%> onclick="markCompOrNot(this)" >
-                <%=e.task%> <i class="fa-solid fa-trash" onclick="deleteTask(this)"></i>
+            <li data-id=<%=e._id%>>
+                <span class=<%=e.completed?"completed":"notDone"%> onclick="markCompOrNot(this)">
+                     <%=e.task%>
+                </span>
+                <i class="fa-solid fa-trash" onclick="deleteTask(this)"></i>
             </li>
         <%})%>
     </ul>
