--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
     <title>Home page</title>
 </head>
 <body>
-    <h1>welcome to the TODO app</h1>
-    <p>Go : <a href="/todos">HERE</a> to get to the main app.</p>
+    <h1>welcome to the TODO's app</h1>
+    <p><a href="/login">Login </a> if have an account.</p>
+    <p>Or <a href="/signup">Create new account</a> if visiting for the first time.</p>
 </body>
 </html>
