--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/indexPage.css">
     <title>Home page</title>
 </head>
 <body>
-    <h1>welcome to the TODO's app</h1>
-    <p><a href="/login">Login </a> if have an account.</p>
-    <p>Or <a href="/signup">Create new account</a> if visiting for the first time.</p>
+    <div id="cover">
+        <h1>Welcome to Your <span> TODO's </span> app.</h1>
+        <p id="dis">A place to note all your todo's and notes. All of which would be saved in the most secure way only you can access</p>
+        <p>Already have an account??</p><br>
+        <a href="/login" class="log">Login ></a>
+        <br>
+        <p>OR</p>
+        <a href="/signup" class="log">SignUp ></a>
+        <p>If new user</p>
+    </div>
 </body>
 </html>
