--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO-app</title>
     <link rel="stylesheet" href="css/mainPageStyle.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1 id="todo-heading">TODOS</h1> 
-    <ul id="taskList">
-        <%if(data.length){%>
-            <% data.forEach(e=>{ %>
-                <li data-id=<%=e._id%>>
-                    <span id="taskSpan" class=<%=e.completed?"completed":"notDone"%> onclick="markCompOrNot(this)">
-                        <%=e.task%>
-                    </span>
-                    <i class=' fa-regular <%=e.completed?"fa-square-check":"fa-square"%>'>
-                        
-                    </i>
-                    <i class="fa-solid fa-trash" onclick="deleteTask(this)"></i>
-                </li>
-                <%})%>
-        <%}%>
-    </ul>
-<!-- making a fetch post on an onsubmit event hence not added the action on the form -->
-    <form method="post" action="/todos/addNewTask" id="newTaskForm">
-        <input type="text" required name="newTask" placeholder="Write your Task" id="newTaskInput">
-        <input type="submit" value="Add Task" id="addNewTaskBtn">
-    </form>
+    <div class="container mt-4" >
+
+        <h1 id="todo-heading">Your TODOS</h1>
+        <ul id="taskList">
+            <%if(data.length){%>
+                <% data.forEach(e=>{ %>
+                    <li data-id=<%=e._id%>>
+                        <span id="taskSpan" class=<%=e.completed?"completed":"notDone"%> onclick="markCompOrNot(this)">
+                            <%=e.task%>
+                        </span>
+                        <i class=' fa-regular <%=e.completed?"fa-square-check":"fa-square"%>'>
+
+                        </i>
+                        <i class="fa-solid fa-trash" onclick="deleteTask(this)"></i>
+                    </li>
+                    <%})%>
+                        <%}%>
+        </ul>
+        <!-- making a fetch post on an onsubmit event hence not added the action on the form -->
+        <form method="post" action="/todos/addNewTask" id="newTaskForm">
+            <input type="text" required name="newTask" placeholder="Write your Task" id="newTaskInput">
+            <input type="submit" value="Add Task" id="addNewTaskBtn" class="btn btn-primary">
+        </form>
 
 
-    <form action="/logout" method="post">
-        <input type="submit" value="LogOut" id="logout_btn">
-    </form>
+        <form action="/logout" method="post">
+            <input type="submit" value="LogOut" id="logout_btn" class="btn btn-danger mt-4 ms-2">
+        </form>
+    </div>
 
 
     <script src="js/static.js"></script>
