--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,14 +9,16 @@
 </head>
 <body>
     <div id="cover">
-        <h1>Welcome to Your <span> TODO's </span> app.</h1>
+        <h1 style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Welcome to Your <span> TODO's </span> app.</h1>
         <p id="dis">A place to note all your todo's and notes. All of which would be saved in the most secure way only you can access</p>
         <p>Already have an account??</p><br>
         <a href="/login" class="log">Login ></a>
         <br>
         <p>OR</p>
         <a href="/signup" class="log">SignUp ></a>
-        <p>If new user</p>
+        <p>If new user</p> <br><br><br>
+        <div class="test"> Test accout email : <span> test@test.com</span></div>
+        <div class="test"> Test accout password : <span>testtest</span></div>
     </div>
 </body>
 </html>
