--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,10 @@
         <p>OR</p>
         <a href="/signup" class="log">SignUp ></a>
         <p>If new user</p> <br><br><br>
-        <div class="test"> Test accout email : <span> test@test.com</span></div>
-        <div class="test"> Test accout password : <span>testtest</span></div>
+        <div id="testDet">
+            <div class="test"> Test accout email : <span> test@test.com</span></div>
+            <div class="test"> Test accout password : <span>testtest</span></div>
+        </div>
     </div>
 </body>
 </html>
