--- a/public/css/indexPage.css
+++ b/public/css/indexPage.css
@@ -1,65 +1,73 @@
-*{
-    box-sizing: border-box;
+body {
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
-}
-body{
-    text-align: center;
-}
-#cover{
-    /* background: rgb(222,21,190);
-    background: linear-gradient(183deg, rgba(222,21,190,1) 0%, rgba(0,188,255,1) 100%); */
-    width: 100vw;
-    height: 100vh;
     display: flex;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
+    min-height: 100vh;
+    background-color: #f5f5f5;
 }
 
-#cover>h1{
-    color:rgb(66, 130, 10) ;
-    font-size: 4rem;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
+.container {
+    width: 800px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #fff;
 }
-#dis{
-    color: purple;
-    font-weight: bolder;
-    font-size: 1.2rem;
-    width: 55%;
+
+.header {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 20px;
 }
-.log{
-    color:  white;
-    background-color: blue;
-    font-weight: bolder;
-    border-radius: 20%;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+
+h1 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+
+p {
+    font-size: 1.2em;
+    color: #777;
+}
+
+.login-signup {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.login, .signup {
+    flex: 1;
+    padding: 20px;
+    padding-left: 3rem;
+    border-radius: 5px;
+    background-color: #f1f1f1;
+}
+
+.login h3, .signup h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+
+
+
+a {
+    background-color: #007bff;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
     text-decoration: none;
 }
-#testDet{
-    padding: 2rem;
-    border: 3px dotted black;
-}
-.test{
-    color:rgb(0, 0, 0) ;
-    font-weight: bolder;
-}
-.test>span{
-    color: purple;
-    font-weight: bolder;
-}
 
-@media all and (max-width:500px) {
-    body{
-        padding: 1rem;
-    }
-    #cover>h1{
-        font-size: 2rem;
-        text-align: center;
-    }
-};
+.message {
+    font-size: 0.8em;
+    font-weight: bolder;
+    color: #777;
+    text-align: center;
+    margin-top: 10px;
+}
