--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO-app</title>
     <link rel="stylesheet" href="css/mainPageStyle.css">
+    <link rel="shortcut icon" href="https://i.postimg.cc/5NQspdv8/todo.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
